add 1st section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,82 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--.....................
+         Font awesome Link 
+    .........................-->
+    <script src="https://kit.fontawesome.com/ab2e86d459.js" crossorigin="anonymous"></script>
+    <!--....................
+        CSS Style Link
+    ........................-->
+    <link rel="stylesheet" href="style/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- <header>
+        <nav>
+            <span class="navigation">
+                <p>Influencer products</p>
+            </span>
+        </nav>
+    </header> -->
+    <main>
+
+      <!-- .........................................
+         Journey as Influencer section start
+      ............................................-->
+
+        <section class="container">
+            <div class="Influencer">
+                <div class="Influencer-info">
+                    <h1>Start your Journey as 
+                       <br> Influencer</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis non, voluptas nihil velit iste deserunt. Minus sit inventore nemo sed.</p>
+                   <button type="button" class="button">Preebook Now 
+                    <span class="button-icon"><i class="fas fa-arrow-circle-right fa-lg"></i></span>
+                   </button>
+                </div>
+                <div class="Influencer-image">
+                   <img src="images/main-camera.png" alt="">
+                </div>
+            </div>
+
+        </section>
+     <!-- .........................................
+         Journey as Influencer section start
+      ............................................-->
+
+        <!-- .........................................
+         Popular Collection section start
+      ............................................-->
+      <section class="container">
+          <div class="Popular Collection">
+            <h1 class="section-title">Popular Collection</h1>
+
+              <div class="products">
+                  <div class="product">
+                      <img src="images/tripod.png" alt="">
+                      <h1 class="image-title">Flex Tripod</h1>
+                      <p>$50.48</p>
+                      <div class="icon">
+                          <span>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                             <span class="reting-number">4.99</span> 
+                          </span>
+                          
+                      </div>
+                  </div>
+
+
+              </div>
+
+          </div>
+
+
+      </section>
+    </main>
 </body>
 </html>
