--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         </section>
      <!-- .........................................
-         Journey as Influencer section start
+         Journey as Influencer section end
       ............................................-->
 
         <!-- .........................................
@@ -80,9 +80,9 @@
                 </div>
                 <div class="products">
                     <div class="product">
-                        <img src="images/tripod.png" alt="">
-                        <h1 class="image-title">Flex Tripod</h1>
-                        <p id="product-price">$50.48</p>
+                        <img src="images/mic.png" alt="">
+                        <h1 class="image-title">microphone</h1>
+                        <p id="product-price">$120.25</p>
                         <div class="icon">
                             <span>
                               <i class="fas fa-star"></i>
@@ -102,9 +102,9 @@
                 </div>
                 <div class="products">
                     <div class="product">
-                        <img src="images/tripod.png" alt="">
-                        <h1 class="image-title">Flex Tripod</h1>
-                        <p id="product-price">$50.48</p>
+                        <img src="images/airpod.png" alt="">
+                        <h1 class="image-title">Airbuds</h1>
+                        <p id="product-price">$100.00</p>
                         <div class="icon">
                             <span>
                               <i class="fas fa-star"></i>
@@ -124,9 +124,9 @@
                 </div>
                 <div class="products">
                     <div class="product">
-                        <img src="images/tripod.png" alt="">
-                        <h1 class="image-title">Flex Tripod</h1>
-                        <p id="product-price">$50.48</p>
+                        <img src="images/drone.png" alt="">
+                        <h1 class="image-title">Drone</h1>
+                        <p id="product-price">$980.25</p>
                         <div class="icon">
                             <span>
                               <i class="fas fa-star"></i>
@@ -146,9 +146,9 @@
                 </div>
                 <div class="products">
                     <div class="product">
-                        <img src="images/tripod.png" alt="">
-                        <h1 class="image-title">Flex Tripod</h1>
-                        <p id="product-price">$50.48</p>
+                        <img src="images/lights.png" alt="">
+                        <h1 class="image-title">Light Setup</h1>
+                        <p id="product-price">$1200.00</p>
                         <div class="icon">
                             <span>
                               <i class="fas fa-star"></i>
@@ -168,9 +168,9 @@
                 </div>
                 <div class="products">
                     <div class="product">
-                        <img src="images/tripod.png" alt="">
-                        <h1 class="image-title">Flex Tripod</h1>
-                        <p id="product-price">$50.48</p>
+                        <img src="images/setup.png" alt="">
+                        <h1 class="image-title">Photoshoot set</h1>
+                        <p id="product-price">$820.40</p>
                         <div class="icon">
                             <span>
                               <i class="fas fa-star"></i>
@@ -190,9 +190,9 @@
                 </div>
                 <div class="products">
                     <div class="product">
-                        <img src="images/tripod.png" alt="">
-                        <h1 class="image-title">Flex Tripod</h1>
-                        <p id="product-price">$50.48</p>
+                        <img src="images/camera.png" alt="">
+                        <h1 class="image-title">Vlogging Camera</h1>
+                        <p id="product-price">$1800.80</p>
                         <div class="icon">
                             <span>
                               <i class="fas fa-star"></i>
@@ -212,9 +212,9 @@
                 </div>
                 <div class="products">
                     <div class="product">
-                        <img src="images/tripod.png" alt="">
-                        <h1 class="image-title">Flex Tripod</h1>
-                        <p id="product-price">$50.48</p>
+                        <img src="images/single-light.png" alt="">
+                        <h1 class="image-title">Green Screen</h1>
+                        <p id="product-price">$25.48</p>
                         <div class="icon">
                             <span>
                               <i class="fas fa-star"></i>
@@ -234,9 +234,9 @@
                 </div>
                 <div class="products">
                     <div class="product">
-                        <img src="images/tripod.png" alt="">
-                        <h1 class="image-title">Flex Tripod</h1>
-                        <p id="product-price">$50.48</p>
+                        <img src="images/action.png" alt="">
+                        <h1 class="image-title">Action Camera</h1>
+                        <p id="product-price">$380.00</p>
                         <div class="icon">
                             <span>
                               <i class="fas fa-star"></i>
@@ -255,11 +255,18 @@
   
                 </div>
               </div>
-
+                  <!-- <a class="ankor" href="">See More <span class="ankor-icon"><i class="fas fa-arrow-right"></i></span></a> -->
+          </div>
+          <div class="ankor">
+            <a href="">See More <span class="ankor-icon"><i class="fas fa-arrow-right"></i></span></a>
           </div>
 
-
+           
       </section>
+      <!-- footer section -->
+      <footer>
+          <h3>Influencer Product</h3>
+      </footer>
     </main>
 </body>
 </html>
