--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
   
                 </div>
               </div>
-                  <!-- <a class="ankor" href="">See More <span class="ankor-icon"><i class="fas fa-arrow-right"></i></span></a> -->
+           
           </div>
           <div class="ankor">
             <a href="">See More <span class="ankor-icon"><i class="fas fa-arrow-right"></i></span></a>
@@ -264,9 +264,20 @@
            
       </section>
       <!-- footer section -->
-      <footer>
-          <h3>Influencer Product</h3>
-      </footer>
     </main>
+    <footer>
+        <h3>Influencer Product</h3>
+        <h6 >Copyright ©  2020  influencer products</h6>
+        <h6 >All rights reserved</h6>
+        <div class="footer-icon">
+            <span>
+                <i class="fab fa-instagram-square"></i>
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-youtube"></i>
+            </span>
+        </div>
+
+    </footer>
 </body>
 </html>
